--- a/1-glossary/package.json
+++ b/1-glossary/package.json
@@ -1,27 +1,38 @@
 {
   "name": "glossary",
   "version": "1.0.0",
+  "description": "",
   "main": "server/index.js",
   "scripts": {
     "server-dev": "npx nodemon --watch server server/index.js",
-    "client-dev": "npx webpack --watch",
+    "client-dev": "npx webpack --mode development --watch",
     "build": "npx webpack",
     "start": "node server/index.js"
   },
+  "author": "",
   "license": "Unlicensed",
   "dependencies": {
-    "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "axios": "^0.21.1",
-    "babel-loader": "^8.2.2",
+    "body-parser": "^1.20.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jquery": "^3.6.1",
     "mongoose": "^6.1.4",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "webpack": "^5.41.0",
-    "webpack-cli": "^4.7.2"
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   }
 }
