--- a/1-glossary/package.json
+++ b/1-glossary/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^6.1.4",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
